// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Pattern/SearchInput empty: Pattern/SearchInput empty 1`] = `
.c2 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.c3 {
  display: inline-block;
  width: 1em;
  height: 1em;
  stroke-width: 0;
  stroke: currentColor;
  fill: currentColor;
  pointer-events: none;
  font-size: 20px;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  height: 48px;
  min-height: 48px;
  background-color: #fff;
  border: 1px solid #e0e0e0;
  border-radius: 4px;
  box-sizing: border-box;
  padding: 0px 16px;
}

.c0:hover {
  background-color: #fafafa;
}

.c4.c4 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  font-size: 1rem;
  font-weight: 400;
  font-family: 'Roboto','Helvetica','Arial',sans-serif;
  line-height: 22px;
  color: #212121;
}

.c1 {
  color: #9e9e9e;
  width: 20px;
  height: 20px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  margin: 0 8px 0 0;
}

<div
  className="c0"
>
  <span
    className="c1 search icon c2"
  >
    <svg
      className="c3"
      role="img"
      size="medium"
    >
      <use
        href="#icon-search"
        xlinkHref="#icon-search"
      />
    </svg>
  </span>
  <div
    className="MuiInputBase-root c4"
    onClick={[Function]}
  >
    <input
      className="MuiInputBase-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      type="text"
      value=""
    />
  </div>
</div>
`;

exports[`Storyshots Pattern/SearchInput large: Pattern/SearchInput large 1`] = `
.c2 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.c3 {
  display: inline-block;
  width: 1em;
  height: 1em;
  stroke-width: 0;
  stroke: currentColor;
  fill: currentColor;
  pointer-events: none;
  font-size: 20px;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  height: 48px;
  min-height: 48px;
  background-color: #fff;
  border: 1px solid #e0e0e0;
  border-radius: 4px;
  box-sizing: border-box;
  padding: 0px 16px;
}

.c0:hover {
  background-color: #fafafa;
}

.c4.c4 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  font-size: 1rem;
  font-weight: 400;
  font-family: 'Roboto','Helvetica','Arial',sans-serif;
  line-height: 22px;
  color: #212121;
}

.c1 {
  color: #9e9e9e;
  width: 20px;
  height: 20px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  margin: 0 8px 0 0;
}

.c5 {
  width: auto;
  text-align: right;
  padding-left: 16px;
  color: #757575;
  font-size: 0.75rem;
  font-weight: 400;
  font-family: 'Roboto','Helvetica','Arial',sans-serif;
  line-height: 16px;
  cursor: pointer;
}

<div
  className="c0"
>
  <span
    className="c1 search icon c2"
  >
    <svg
      className="c3"
      role="img"
      size="medium"
    >
      <use
        href="#icon-search"
        xlinkHref="#icon-search"
      />
    </svg>
  </span>
  <div
    className="MuiInputBase-root c4 MuiInputBase-adornedEnd"
    onClick={[Function]}
  >
    <input
      className="MuiInputBase-input MuiInputBase-inputAdornedEnd"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      type="text"
      value="searchKey"
    />
    <span
      className="c5"
      data-test-automation-id="search-input-clear"
      onClick={[Function]}
    >
      clear
    </span>
  </div>
</div>
`;

exports[`Storyshots Pattern/SearchInput medium: Pattern/SearchInput medium 1`] = `
.c2 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.c3 {
  display: inline-block;
  width: 1em;
  height: 1em;
  stroke-width: 0;
  stroke: currentColor;
  fill: currentColor;
  pointer-events: none;
  font-size: 20px;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  height: 40px;
  min-height: 40px;
  background-color: #fff;
  border: 1px solid #e0e0e0;
  border-radius: 4px;
  box-sizing: border-box;
  padding: 0px 16px;
}

.c0:hover {
  background-color: #fafafa;
}

.c4.c4 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  font-size: 1rem;
  font-weight: 400;
  font-family: 'Roboto','Helvetica','Arial',sans-serif;
  line-height: 22px;
  color: #212121;
}

.c1 {
  color: #9e9e9e;
  width: 20px;
  height: 20px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  margin: 0 8px 0 0;
}

.c5 {
  width: auto;
  text-align: right;
  padding-left: 16px;
  color: #757575;
  font-size: 0.75rem;
  font-weight: 400;
  font-family: 'Roboto','Helvetica','Arial',sans-serif;
  line-height: 16px;
  cursor: pointer;
}

<div
  className="c0"
>
  <span
    className="c1 search icon c2"
  >
    <svg
      className="c3"
      role="img"
      size="medium"
    >
      <use
        href="#icon-search"
        xlinkHref="#icon-search"
      />
    </svg>
  </span>
  <div
    className="MuiInputBase-root c4 MuiInputBase-adornedEnd"
    onClick={[Function]}
  >
    <input
      className="MuiInputBase-input MuiInputBase-inputAdornedEnd"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      type="text"
      value="searchKey"
    />
    <span
      className="c5"
      data-test-automation-id="search-input-clear"
      onClick={[Function]}
    >
      clear
    </span>
  </div>
</div>
`;
